--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,14 +1,18 @@
 .list {
   width: 320px;
-  /* padding: 10px; */
+  padding: 10px;
   margin: 0px;
-  display: flex;
+  list-style: circle;
   flex-wrap: wrap;
   align-items: flex-start;
   padding: 10px 40px;
+  display: block;
 }
 .item {
   margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: inherit;
 }
 .itemName {
   margin-right: 5px;
